Fixed orders security issue